--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       let init = window.location.href.replace(new RegExp(param + "=(true|false)", "g"), m => param + "=" + switchVal(m.replace(new RegExp(param + "=", "g"), "")));
       if (!init.includes(param + "=")) init += "&" + param + "=" + !def;
       init=init.replace(/\/&/g,"/?");
+      console.log(init);
       document.getElementById(id).href = init;
     }
     document.getElementById('oblique').innerText = OBLIQUE ? "Bi" : "Mono";
